# Information_system_for_the_Puma_Karate_sports_center

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  SECURITY.md  docker-compose.dokploy.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  temp.db
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_achievement_options_alter_clubteam_options_and_more.py  0003_delete_clubteam.py  0004_add_passport_snils.py  0005_patronymic_medical_insurance_remove_passport_snils.py  0006_remove_user_telegram_id.py  0007_achievement_image.py
backend/competitions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/competitions/migrations/: 0001_initial.py  0002_alter_competition_options_and_more.py  0003_competition_visible_groups.py  0004_delete_teamcompetitionresult.py  0005_delete_competitionresult.py
backend/config/: middleware.py  settings.py  swagger.py  urls.py
backend/journal/: models.py  serializers.py  urls.py  views.py
backend/journal/migrations/: 0001_initial.py  0002_remove_journal_kata_score_and_more.py
backend/notifications/: consumers.py
backend/trainings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/trainings/migrations/: 0001_initial.py  0002_alter_attendance_options_alter_group_options_and_more.py  0003_alter_attendance_options_alter_homework_options_and_more.py  0004_alter_training_options_training_created_at_and_more.py  (+5 more)
(+79 files in other folders)
