[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puma-karate-backend"
version = "0.1.0"
description = "Django backend for Puma Karate Sports Center"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2",
    "djangorestframework",
    "django-cors-headers",
    "psycopg2-binary",  # если используете PostgreSQL
]

[tool.setuptools]
packages = [
    "config",
    "accounts",
    "journal",
    "trainings",
    "competitions",
    "notifications",
]

[tool.setuptools.package-dir]
"" = "."